fixed landing page text on mobile

--- a/style.css
+++ b/style.css
@@ -20,3 +20,11 @@ html, body {
   font-size: 500%;
   font-weight: 700%;
 }
+
+@media (max-width: 768px) {
+  .landing-text h1
+  {
+    font-size: 300%;
+
+  }
+}
